updated theme and styling. added a few menu points

--- a/src/app.css
+++ b/src/app.css
@@ -2,3 +2,8 @@
     background: var(--primary-color);
     color: var(--primary-color-text);
 }
+
+.p-10 {
+    padding-left: 10%;
+    padding-right: 10%;
+}
