--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--surface-ground);
+  font-family: var(--font-family);
+  font-weight: 400;
+  color: var(--text-color);
 }
 
 code {
